# ethereum-simulator

./: .gitignore  Cargo.toml  README.md
contracts/: client.py  tx_send_params.json
src/: account.rs  api.rs  block.rs  cli.rs  client.rs  eth_api.rs  eth_simulator.rs  eth_types.rs  evm.rs  hash.rs  lib.rs  main.rs  state.rs  tx.rs  utils.rs
src/account/: storage.rs
src/api/cli/: cmd.rs  cmd_errors.rs
src/cli/: cmd.rs  cmd_errors.rs
src/client/: cli.rs  repl.rs  rpc.rs
src/eth_simulator/: account.rs  block.rs  eth_types.rs  evm.rs  hash.rs  state.rs  tx.rs
src/eth_simulator/account/: storage.rs
src/eth_simulator/evm/: ext.rs  instructions.rs  memory.rs  pc.rs  stack.rs  vm.rs
src/evm/: ext.rs  instructions.rs  memory.rs  pc.rs  stack.rs  vm.rs
tests/: C.evm  Echo.sol  MetaCoin.sol  call.json  client.py  deploy.json  example.sol  tx_send_params.json
