[package]
name = "ethereum-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethsign = "0.8.0"
sha256 = "1.0.3"
ethereum-types = "0.13.1"
fixed-hash = "0.7.0"
keccak-hash = "0.9.0"
serde_json = "1.0.82"
# num = "0.4.0"
